--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
   <body class="">
     <header>
-      <div class="container">
-        <div class="header__title">
+      <div class="container split space-bt align-ic ">
+        <div class="header__info">
           <h1 class="title">Social Media Dashboard</h1>
-          <p class="sub-title">Total Followers: 23,004</p>
+          <p class="subtitle">Total Followers: 23,004</p>
         </div>
         <div class="switch">
           <p>Dark Mode</p>
@@ -30,11 +30,11 @@
       </div>
     </header>
 
+  <main>
     <section class="followers">
-      <div class="container">
-
-        <div class="card-lg">
-          <div class="card-lg__header">
+      <div class="container cards split-auto justify-ic">
+        <div class=" card card-lg flow-content">
+          <div class="card__header">
             <img src="images/icon-facebook.svg" alt="facebook icon">
             <p class="name">@nathanf</p>
           </div>
@@ -45,8 +45,8 @@
           <p class="trend-up">12 Today</p>
         </div>
 
-        <div class="card-lg">
-          <div class="card-lg__header">
+        <div class="card card-lg flow-content">
+          <div class="card__header">
             <img src="images/icon-twitter.svg" alt="twitter icon">
             <p class="name">@nathanf</p>
           </div>
@@ -57,8 +57,8 @@
           <p class="trend-up">99 Today</p>
         </div>
 
-        <div class="card-lg">
-          <div class="card-lg__header">
+        <div class="card card-lg flow-content">
+          <div class="card__header">
             <img src="images/icon-instagram.svg" alt="instagram icon">
             <p class="name">@realnathanf</p>
           </div>
@@ -69,8 +69,8 @@
           <p class="trend-up">1099Today</p>
         </div>
 
-        <div class="card card-lg">
-          <div class="header">
+        <div class="card card-lg flow-content">
+          <div class="card__header">
             <img src="images/icon-youtube.svg" alt="youtube icon">
             <p class="name">Nathan F.</p>
           </div>
@@ -85,100 +85,104 @@
     </section>
 
     <section class="overview">
-      <div class="container">
+      <div class="container flow-content">
 
         <h2>Overview - Today</h2>
+        <div class="cards justify-ic split-auto">
 
-        <div class="card">
-          <div class="header">
+        <div class="card flow-content">
+          <div class="card__header">
             <p>Page Views</p>
             <img src="images/icon-facebook.svg" alt="facebook icon">
           </div>
-          <div class="data">
+          <div class="card__body">
             <p class="title">87</p>
             <p class="trend-up">3%</p>
           </div>
         </div>
 
-        <div class="card">
-          <div class="header">
+        <div class="card flow-content">
+          <div class="card__header">
             <p>Likes</p>
             <img src="images/icon-facebook.svg" alt="facebook icon">
           </div>
-          <div class="data">
+          <div class="card__body">
             <p class="title">52</p>
             <p class="trend-down">2%</p>
           </div>
         </div>
 
-        <div class="card">
-          <div class="header">
+        <div class="card flow-content">
+          <div class="card__header">
             <p>Likes</p>
             <img src="images/icon-instagram.svg" alt="instagram icon">
           </div>
-          <div class="data">
+          <div class="card__body">
             <p class="title">5462</p>
             <p class="trend-up">2257%</p>
           </div>
         </div>
 
-        <div class="card">
-          <div class="header">
+        <div class="card flow-content">
+          <div class="card__header">
             <p>Profile Views</p>
             <img src="images/icon-instagram.svg" alt="instagram icon">
           </div>
-          <div class="data">
+          <div class="card__body">
             <p class="title">52K</p>
             <p class="trend-up">1357%</p>
           </div>
         </div>
 
-        <div class="card">
-          <div class="header">
+        <div class="card flow-content">
+          <div class="card__header">
             <p>Retweets</p>
             <img src="images/icon-twitter.svg" alt="twitter icon">
           </div>
-          <div class="data">
+          <div class="card__body">
             <p class="title">117</p>
             <p class="trend-up">303%</p>
           </div>
         </div>
 
-        <div class="card">
-          <div class="header">
+        <div class="card flow-content">
+          <div class="card__header">
             <p>Likes</p>
             <img src="images/icon-twitter.svg" alt="twitter icon">
           </div>
-          <div class="data">
+          <div class="card__body">
             <p class="title">507</p>
             <p class="trend-up">553%</p>
           </div>
         </div>
 
-        <div class="card">
-          <div class="header">
+        <div class="card flow-content">
+          <div class="card__header">
             <p>Likes</p>
             <img src="images/icon-youtube.svg" alt="youtube icon">
           </div>
-          <div class="data">
+          <div class="card__body">
             <p class="title">107</p>
             <p class="trend-down">19%</p>
           </div>
         </div>
 
-        <div class="card">
-          <div class="header">
+        <div class="card flow-content">
+          <div class="card__header">
             <p>Page Views</p>
             <img src="images/icon-youtube.svg" alt="youtube icon">
           </div>
-          <div class="data">
+          <div class="card__body">
             <p class="title">1407</p>
             <p class="trend-up">12%</p>
           </div>
         </div>
+
+        </div>
+
       </div>
     </section>
-
+  </main>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">Chell Gouda</a>.
