completed all css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </style>
   </head>
 
-  <body class="">
+  <body class="bg-dark">
     <header>
       <div class="container split space-bt align-ic ">
         <div class="header__info">
@@ -33,52 +33,65 @@
   <main>
     <section class="followers">
       <div class="container cards split-auto justify-ic">
-        <div class=" card card-lg flow-content">
+        <div class=" card card-lg | fb | flow-content">
           <div class="card__header">
             <img src="images/icon-facebook.svg" alt="facebook icon">
             <p class="name">@nathanf</p>
           </div>
-          <div class="data">
+          <div class="body">
             <p class="title">1987</p>
             <p class="subtitle">Followers</p>
           </div>
-          <p class="trend-up">12 Today</p>
+          <div class="trend">
+            <img src="images/icon-up.svg" alt="">
+            <p class="trend-up">12 Today</p>
+          </div>
+
         </div>
 
-        <div class="card card-lg flow-content">
+        <div class="card card-lg | tw | flow-content">
           <div class="card__header">
             <img src="images/icon-twitter.svg" alt="twitter icon">
             <p class="name">@nathanf</p>
           </div>
-          <div class="data">
+          <div class="body">
             <p class="title">1044</p>
             <p class="subtitle">Followers</p>
           </div>
-          <p class="trend-up">99 Today</p>
+          <div class="trend">
+            <img src="images/icon-up.svg" alt="">
+            <p class="trend-up">99 Today</p>
+          </div>
         </div>
 
-        <div class="card card-lg flow-content">
+        <div class="card card-lg | in | flow-content">
           <div class="card__header">
             <img src="images/icon-instagram.svg" alt="instagram icon">
             <p class="name">@realnathanf</p>
           </div>
-          <div class="data">
+          <div class="body">
             <p class="title">11k</p>
             <p class="subtitle">Followers</p>
           </div>
-          <p class="trend-up">1099Today</p>
+          <div class="trend">
+            <img src="images/icon-up.svg" alt="">
+            <p class="trend-up">1099 Today</p>
+          </div>
         </div>
 
-        <div class="card card-lg flow-content">
+        <div class="card card-lg | yt | flow-content">
           <div class="card__header">
             <img src="images/icon-youtube.svg" alt="youtube icon">
             <p class="name">Nathan F.</p>
           </div>
-          <div class="data">
+          <div class="body">
             <p class="title">1987</p>
             <p class="subtitle">Subscribers</p>
           </div>
-          <p class="trend-down">144 Today</p>
+          <div class="trend">
+            <img src="images/icon-down.svg" alt="">
+            <p class="trend-down">144 Today</p>
+          </div>
         </div>
 
       </div>
@@ -97,7 +110,10 @@
           </div>
           <div class="card__body">
             <p class="title">87</p>
-            <p class="trend-up">3%</p>
+            <div class="trend">
+              <img src="images/icon-up.svg" alt="">
+              <p class="trend-up">3%</p>
+            </div>
           </div>
         </div>
 
@@ -108,7 +124,11 @@
           </div>
           <div class="card__body">
             <p class="title">52</p>
-            <p class="trend-down">2%</p>
+            <div class="trend">
+              <img src="images/icon-down.svg" alt="">
+              <p class="trend-down">2%</p>
+            </div>
+
           </div>
         </div>
 
@@ -119,7 +139,11 @@
           </div>
           <div class="card__body">
             <p class="title">5462</p>
-            <p class="trend-up">2257%</p>
+            <div class="trend">
+              <img src="images/icon-up.svg" alt="">
+              <p class="trend-up">2257%</p>
+            </div>
+
           </div>
         </div>
 
@@ -130,7 +154,11 @@
           </div>
           <div class="card__body">
             <p class="title">52K</p>
-            <p class="trend-up">1357%</p>
+            <div class="trend">
+              <img src="images/icon-up.svg" alt="">
+              <p class="trend-up">1357%</p>
+            </div>
+
           </div>
         </div>
 
@@ -141,7 +169,11 @@
           </div>
           <div class="card__body">
             <p class="title">117</p>
-            <p class="trend-up">303%</p>
+            <div class="trend">
+              <img src="images/icon-up.svg" alt="">
+              <p class="trend-up">303%</p>
+            </div>
+
           </div>
         </div>
 
@@ -152,7 +184,11 @@
           </div>
           <div class="card__body">
             <p class="title">507</p>
-            <p class="trend-up">553%</p>
+            <div class="trend">
+              <img src="images/icon-up.svg" alt="">
+              <p class="trend-up">553%</p>
+            </div>
+
           </div>
         </div>
 
@@ -163,7 +199,10 @@
           </div>
           <div class="card__body">
             <p class="title">107</p>
-            <p class="trend-down">19%</p>
+            <div class="trend">
+              <img src="images/icon-down.svg" alt="">
+              <p class="trend-down">19%</p>
+            </div>
           </div>
         </div>
 
@@ -174,7 +213,10 @@
           </div>
           <div class="card__body">
             <p class="title">1407</p>
-            <p class="trend-up">12%</p>
+            <div class="trend">
+              <img src="images/icon-up.svg" alt="">
+              <p class="trend-up">12%</p>
+            </div>
           </div>
         </div>
 
